plugins {
    id 'com.android.library'
}
apply from: '../jacoco.gradle'

android {
    lintOptions {
        abortOnError false
        ignoreWarnings true
    }
    compileSdkVersion rootProject.ext.compileSdkVersion
    buildToolsVersion rootProject.ext.buildToolsVersion

    defaultConfig {
        minSdkVersion rootProject.ext.minSdkVersion
        targetSdkVersion rootProject.ext.targetSdkVersion
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
        versionCode 1
        versionName "1.0"
        buildConfigField("String", "CLIENT_VERSION", rootProject.ext.clientmanagerLibVersionName)
        buildConfigField("String", "BASE_URL", rootProject.ext.serverBaseURL)
        buildConfigField("String", "DEBUG_PASSWORD", rootProject.ext.debugPassword)
        buildConfigField("long", "HTTP_READ_TIMEOUT", "${rootProject.ext.httpReadTimeout}L")
        buildConfigField("long", "HTTP_WRITE_TIMEOUT", "${rootProject.ext.httpWriteTimeout}L")
    }

    buildTypes {
        debug {
            testCoverageEnabled true
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    sourceSets {
        main {
            assets {
                srcDirs 'src\\main\\assets', 'src\\androidTest\\assets'
            }
        }
    }

    libraryVariants.every { variant ->
        variant.outputs.each { output ->
            def outputFile = output.outputFile
            if (outputFile != null && outputFile.name.endsWith('.aar')) {
                output.outputFile = new File(projectDir, '../app/new_libs/' + outputFile.name)
            }
        }
    }
}

dependencies {
    def work_version = "2.7.1"

    implementation 'com.google.dagger:dagger:2.41'
    implementation 'com.google.dagger:dagger-android-support:2.41'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.41'
    annotationProcessor 'com.google.dagger:dagger-android-processor:2.41'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'javax.validation:validation-api:2.0.1.Final'

    implementation 'com.cronutils:cron-utils:9.2.0'

    //AspectJ
    implementation 'org.aspectj:aspectjrt:1.9.7'

    // https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
    implementation 'io.swagger.core.v3:swagger-annotations:2.1.11'

    implementation "androidx.room:room-runtime:2.4.2"
    annotationProcessor "androidx.room:room-compiler:2.4.2"

    implementation "net.zetetic:android-database-sqlcipher:4.5.3"
    implementation "androidx.security:security-crypto:1.1.0-alpha06"

    implementation 'org.json:json:20231013'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.springframework:spring-test:5.3.20'
    testImplementation 'org.slf4j:slf4j-simple:2.0.13'

    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
    androidTestImplementation "org.mockito:mockito-android:4.6.1"
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.mockito:mockito-core:4.6.1"
    testImplementation 'org.mockito:mockito-inline:4.4.0'
    testImplementation 'org.robolectric:robolectric:4.8'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
    testImplementation "org.mockito:mockito-android:4.6.1"
    testImplementation "androidx.test:core:1.5.0"
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'



    // (Java only)
    implementation "androidx.work:work-runtime:$work_version"

    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.okio:okio:3.4.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.2'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

    // JWT decoding library
    implementation 'com.auth0.android:jwtdecode:2.0.1'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'

    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0-rc1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.2'

    implementation 'org.apache.velocity:velocity:1.7'
    implementation 'org.mvel:mvel2:2.4.14.Final'

    implementation('com.tom-roush:pdfbox-android:2.0.27.0') {
        exclude group: 'org.bouncycastle'
    }

    implementation 'com.github.Tgo1014:JP2ForAndroid:1.0.4'

    implementation('io.mosip.biometric.util:biometrics-util:1.2.0.2') {
        exclude group: 'org.springframework.boot'
        exclude group: 'com.fasterxml.jackson.core'
        exclude group: 'org.projectlombok'
        exclude group: 'org.openpnp'
    }
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha7'

    // added packet-manager Android library module as a dependency
    implementation project(':packetmanager')
    implementation project(':keymanager')

    api project(':matchsdk')
    implementation 'com.github.kenglxn.QRGen:android:3.0.1'
    implementation("io.mosip.kernel:kernel-biometrics-api:1.2.0.3"){
        transitive = false
    }
    implementation 'com.google.code.gson:gson:2.10.1'
}
